<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFFFF"
    >
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/startseiteanzeigen_intro"
	    android:textColor="@color/black"
	    />
	<Button android:id="@+id/sf_starte_routenauswahl" 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
		android:text="@string/app_routeFestlegen"
		/>
	<Button android:id="@+id/sf_erfasse_staumeldung" 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
		android:text="@string/app_staumeldungErfassen"
		/>
	<Button android:id="@+id/opt_strassenkarte_anzeigen" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:text="@string/app_strassenkarteAnzeigen"
    />	        
</LinearLayout>
