<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/staumeldungerfassen_intro"
  />
  <RadioGroup
    android:id="@+id/position"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
  >
    <RadioButton
      android:id="@+id/stauEnde"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/staumeldungerfassen_stauEnde"
    />
    <RadioButton
      android:id="@+id/stauMitte"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/staumeldungerfassen_stauMitte"
    />
    <RadioButton
      android:id="@+id/stauAnfang"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/staumeldungerfassen_stauAnfang"
    />
  </RadioGroup>
  <Spinner
    android:id="@+id/stauUrsache"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:drawSelectorOnTop="true"
  />  
</LinearLayout>
