<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
		android:id="@+id/kurzbezeichnung" />
	    
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent">

    <TableRow>
		<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/stauinfoanzeigen_anzahlMeldungen"
		    android:padding="3dip"
		    />
		<TextView  
			android:id="@+id/anzahlMeldungen"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
			android:padding="3dip"
		    />
    </TableRow>
    
    <TableRow>
		<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/stauinfoanzeigen_stauAnfang"
		    android:padding="3dip"
		    />
		<TextView  
			android:id="@+id/stauAnfang"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
			android:padding="3dip"
		    />
    </TableRow>

    <TableRow>
		<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/stauinfoanzeigen_stauEnde"
		    android:padding="3dip"
		    />
		<TextView  
			android:id="@+id/stauEnde"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
			android:padding="3dip"
		    />
    </TableRow>

    <TableRow>
		<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/stauinfoanzeigen_stauUrsache"
			android:padding="3dip"
		    />
		<TextView  
			android:id="@+id/stauUrsache"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
			android:padding="3dip"
		    />
    </TableRow>

</TableLayout>	    
</LinearLayout>
